syntax = "proto3";

option go_package = "deliverygrpc/";

service DeliveryServiceGRPC{
  rpc CalculateShippingCost(GetShippingCostRequest) returns (GetShippingCostResponse){}
}

message GetShippingCostRequest {
  string src_code = 1;
  string dest_code = 2;
  string delivery_id = 3;
}

message GetShippingCostResponse {
  string receive_date = 1;
  string delivery_id = 2;
  string delivery_name = 3;
  int32 cost = 4;
}
